--- a/portal/templates/home.html
+++ b/portal/templates/home.html
@@ -8,10 +8,24 @@
 		<title>TuRest</title>
 	</head>
 	<body>
-		<div class="container" style="background-color:#ccc"> 
-			<h1>TuRest: vea nuestra oferta</h1>
+		<div class="container" style="background-color:#ccc">
+			<div class="row mt-5">
+				<div class="col-12">
+					<h1 class="text-center">Oferta gastronómica</h1>
+					<p>A Continuación encontrarán todos los platos disponibles en el local</p>
+				</div>
+			</div>
+			{% for item in items %}
+				<article class="row mt-3">
+					<div class="col-12">
+						<h2 class="text-center">{{item.name}}</h2>
+						<p class="text-primary">{{item.description}}</p>
+						<p class="text-secondary">precio: ${{item.price}}</p>
+					</div>
+				</article>
+			{% endfor %}
 		</div>
-		
+
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
