--- a/administracion/templates/list.html
+++ b/administracion/templates/list.html
@@ -1,18 +1,19 @@
-{% extends 'structure.html' %}
-{% block content %}
-	<div class="row mt-5">
-		<div class="col-12">
-			<h1 class="text-center">Oferta gastronómica</h1>
-			<p>Menú:</p>
+<!doctype html>
+<html lang="es">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+		<title>Panel de control</title>
+	</head>
+	<body>
+		<div class="container" style="background-color:#ccc"> 
+			<h1>bienvenido!</h1>
 		</div>
-	</div>
-	{% for item in items %}
-		<article class="row mt-3">
-			<div class="col-12">
-				<h2 class="text-center"><a href="{% url 'itemChange' pk=item.pk %}">{{item.name}}</a></h2>
-				<p class="text-primary">{{item.description|linebreaksbr}}</p>
-				<p class="text-secondary">precio: ${{item.price}}</p>
-			</div>
-		</article>
-	{% endfor %}
-{% endblock %}
+		
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	</body>
+</html>
