--- a/portal/templates/portal/home.html
+++ b/portal/templates/portal/home.html
@@ -1,4 +1,4 @@
-{% extends 'structure.html' %}
+{% extends 'publicStructure.html' %}
 {% block content %}
 	<div class="row mt-5">
 		<div class="col-12">
