se agrega un form para crear un nuevo item

--- a/administracion/templates/structure.html
+++ b/administracion/templates/structure.html
@@ -8,6 +8,7 @@
 		<title>panel de control</title>
 	</head>
 	<body>
+		<a href="{% url 'itemNew' %}"><span class="glyphicon glyphicon-plus"> Nueva entrada al menú</span></a>
 		<div class="container" style="background-color:#ccc">
 			{% block content %}
 			{% endblock %}
