se agrega un menú para acceder a las acciones

--- a/administracion/templates/admin/itemNew.html
+++ b/administracion/templates/admin/itemNew.html
@@ -1,4 +1,4 @@
-{% extends 'structure.html' %}
+{% extends 'panelStructure.html' %}
 {% block content %}
 	<h1 class="text-center">Nueva entrada del menú:</h1>
 	<form method="POST" class="post-form">{% csrf_token %}
