--- a/administracion/templates/admin/list.html
+++ b/administracion/templates/admin/list.html
@@ -1,4 +1,4 @@
-{% extends 'structure.html' %}
+{% extends 'panelStructure.html' %}
 {% block content %}
 	<div class="row mt-5">
 		<div class="col-12">
