--- a/administracion/templates/panelStructure.html
+++ b/administracion/templates/panelStructure.html
@@ -16,7 +16,7 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav mr-auto">
 					<li><a class="nav-link text-white" href="{% url 'home' %}">Inicio</a></li>
-					<li><a class="nav-link text-white" href="{% url 'home' %}">Ver menú</a></li>
+					<li><a class="nav-link text-white" href="{% url 'itemList' %}">Ver menú</a></li>
 					<li><a class="nav-link text-white" href="{% url 'itemNew' %}"><span class="glyphicon glyphicon-plus"> Nueva entrada</span></a></li>
 				</ul>
 			</div>
