--- a/administracion/templates/admin/home.html
+++ b/administracion/templates/admin/home.html
@@ -9,7 +9,7 @@
 	{% for item in items %}
 		<article class="row mt-3">
 			<div class="col-12">
-				<h2 class="text-center"><a href="{% url 'itemChange' pk=item.pk %}">{{item.name}}</a></h2>
+				<h2 class="text-center"><a href="{% url 'itemInfo' pk=item.pk %}">{{item.name}}</a></h2>
 				<p class="text-primary">{{item.description|linebreaksbr}}</p>
 				<p class="text-secondary">precio: ${{item.price}}</p>
 			</div>
