--- a/administracion/templates/panelStructure.html
+++ b/administracion/templates/panelStructure.html
@@ -15,9 +15,10 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav mr-auto">
-					<li><a class="nav-link text-white" href="{% url 'home' %}">Inicio</a></li>
+					<li><a class="nav-link text-white" href="{% url 'panel' %}">Inicio</a></li>
 					<li><a class="nav-link text-white" href="{% url 'itemList' %}">Ver menú</a></li>
 					<li><a class="nav-link text-white" href="{% url 'itemNew' %}"><span class="glyphicon glyphicon-plus"> Nueva entrada</span></a></li>
+					<li><a class="nav-link text-white" href="{% url 'salir' %}">Salir</a></li>
 				</ul>
 			</div>
 		</nav>
