modifico panelStructure.html con mozos y alta de mozo

--- a/administracion/templates/panelStructure.html
+++ b/administracion/templates/panelStructure.html
@@ -18,6 +18,8 @@
 					<li><a class="nav-link text-white" href="{% url 'panel' %}">Inicio</a></li>
 					<li><a class="nav-link text-white" href="{% url 'itemList' %}">Ver menú</a></li>
 					<li><a class="nav-link text-white" href="{% url 'itemNew' %}"><span class="glyphicon glyphicon-plus"> Nueva entrada</span></a></li>
+                    <li><a class="nav-link text-white" href="{% url 'mozoList' %}">Mozos</a></li>
+                    <li><a class="nav-link text-white" href="{% url 'mozoNew' %}"><span class="glyphicon glyphicon-plus"> Alta de mozo</span></a></li>
 					<li><a class="nav-link text-white" href="{% url 'salir' %}">Salir</a></li>
 				</ul>
 			</div>
