--- a/administracion/templates/admin/mozos.html
+++ b/administracion/templates/admin/mozos.html
@@ -8,11 +8,11 @@
 	{% for mozo in mozos %}
 		<article class="row mt-3">
 			<div class="col-12">
-				<h2 class="text-center">nombre: ${{mozo.nombre}}</h2>
-				<p class="text-primary">dni: ${{mozo.dni}}</p>
-                <p class="text-primary">direccion: ${{mozo.direccion}}</p>
-                <p class="text-primary">telefono: ${{mozo.telefono}}</p>
-                <p class="text-primary">mail: ${{mozo.mail}}</p>
+				<h2 class="text-center">nombre: {{mozo.nombre}}</h2>
+				<p class="text-primary">dni: {{mozo.dni}}</p>
+                <p class="text-primary">direccion: {{mozo.direccion}}</p>
+                <p class="text-primary">telefono: {{mozo.telefono}}</p>
+                <p class="text-primary">mail: {{mozo.mail}}</p>
 			</div>
 		</article>
 	{% endfor %}
