--- a/administracion/templates/panelStructure.html
+++ b/administracion/templates/panelStructure.html
@@ -23,6 +23,7 @@
 					<li><a class="nav-link text-white" href="{% url 'asignacionNew' %}"><span class="glyphicon glyphicon-plus"> Asignacion Mesas</span></a></li>
 					<li><a class="nav-link text-white" href="{% url 'asignacionesList' %}"><span class="glyphicon glyphicon-plus"> Asignaciones</span></a></li>
 					<li><a class="nav-link text-white" href="{% url 'mesaNew' %}"><span class="glyphicon glyphicon-plus"> Alta de mesa</span></a></li>
+					<li><a class="nav-link text-white" href="{% url 'sectorNew' %}"><span class="glyphicon glyphicon-plus"> Alta de sector</span></a></li>
 					<li><a class="nav-link text-white" href="{% url 'salir' %}">Salir</a></li>
 
 				</ul>
