--- a/administracion/templates/admin/mesasList.html
+++ b/administracion/templates/admin/mesasList.html
@@ -13,4 +13,18 @@
 			</div>
 		</article>
 	{% endfor %}
+
+	<div class="row mt-5">
+		<div class="col-12">
+			<h1 class="text-center">Sectores</h1>
+		</div>
+	</div>
+	{% for sector in sectores %}
+		<article class="row mt-3">
+			<div class="col-12">
+				<h2 class="text-primary">Sector: {{sector.sector}}</h2>
+				<p class="text-secondary">Mesa: {{sector.mesa}}</p>
+			</div>
+		</article>
+	{% endfor %}
 {% endblock %}
