--- a/portal/templates/portal/home.html
+++ b/portal/templates/portal/home.html
@@ -9,9 +9,7 @@
 	{% for item in items %}
 		<article class="row mt-3">
 			<div class="col-12">
-				<h2 class="text-center">{{item.name}}</h2>
-				<p class="text-primary">{{item.description|linebreaksbr}}</p>
-				<p class="text-secondary">precio: ${{item.price}}</p>
+				<h2 class="text-center"><a href="{% url 'itemView' pk=item.pk %}">{{item.name}}</a></h2>
 			</div>
 		</article>
 	{% endfor %}
