--- a/portal/templates/portal/itemView.html
+++ b/portal/templates/portal/itemView.html
@@ -7,7 +7,29 @@
 			<p class="text-primary">{{item.description|linebreaksbr}}</p>
 			<p class="text-secondary">precio: ${{item.price}}</p>
 		</article>
-		<a href="{% url 'itemList' %}" class="card-link">Pedir</a>
+		
 	</div>
 </div>
+
+
+<form action="" method="post">{% csrf_token %}
+<input type="hidden" name="item" value="{{item.pk}}" />
+
+<div class="row mt-5">
+<div class="col">
+<div class="form-group">
+
+<label for="cantidad">elija cantidad</label>
+<input type="number" name="cantidad" id="cantidad" value=1 min=1 max=20 class="form-control" />
+</div>
+</div>
+</div>
+
+<div class="row mt-3">
+<div class="col-12 text-center">
+<input type="submit" class="btn btn-primary btn-block" value="pedir" />
+</div>
+</div>
+
+</form>
 {% endblock %}
