--- a/portal/templates/portal/home.html
+++ b/portal/templates/portal/home.html
@@ -6,6 +6,17 @@
 			<p>A Continuación encontrarán todos los platos disponibles en el local</p>
 		</div>
 	</div>
+{% if pedidoss|length > 0 %}
+		<article class="row mt-5">
+			<div class="col-12">
+            <ul>
+				<li></li><a href="{% url 'cartView' %}">Ver pedido</a></li>
+				<li></li><a href="{% url 'cartConfirm' %}">Confirmar pedido</a></li>
+            </ul>
+			</div>
+		</article>
+{% endif %}
+
 	{% for item in items %}
 		<article class="row mt-3">
 			<div class="col-12">
