--- a/portal/templates/publicStructure.html
+++ b/portal/templates/publicStructure.html
@@ -9,6 +9,19 @@
 	</head>
 	<body>
 		<div class="container" style="background-color:#ccc">
+        {% if request.user.is_authenticated %}
+        <nav class="navbar navbar-expand-lg navbar-dark bg-warning">
+			<p class="navbar-brand text-white">Gestión</p>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Menú">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav mr-auto">
+        <li><a class="nav-link text-white" href="{% url 'salir' %}">Salir</a></li>		
+        </ul>
+			</div>
+		</nav>
+        {% endif %}
 			{% block content %}
 			{% endblock %}
 		</div>
