modificacion vista de iniciar sesion

--- a/portal/templates/registration/login.html
+++ b/portal/templates/registration/login.html
@@ -8,14 +8,17 @@
 
 	<form class="form-siging" method="POST">
 		{% csrf_token %}
-		<img class="mb-4" src="{{ site.baseurl }}/docs/{{ site.docs_version }}/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
 		<h1 class="h3 mb-3 font-weight-normal">Ingresar</h1>
 		<p>Para ingresar deberá  identificarse.</p>
 		<label for="id_username" class="sr-only">Usuario:</label>
+		<p>Usuario</p> 
 		{{form.username}}
+		<br></br>
 		<label for="inputPassword" class="sr-only">Contraseña</label>
+		<p>Contraseña</p>
 		{{form.password}}
-		<button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
+		<br></br>
+		<button class="btn btn-lg btn-primary btn-block" type="submit">Ingresar</button>
 	</form>
 	<a href="{% url 'password_reset' %}">Recuperar contraseña</a>
     {% endblock %}
