cambio enlace a boton el ver pedido

--- a/portal/templates/portal/home.html
+++ b/portal/templates/portal/home.html
@@ -10,7 +10,7 @@
 		<article class="row mt-5">
 			<div class="col-12">
             <ul>
-				<li></li><a href="{% url 'cartView' %}">Ver pedido</a></li>
+				<a href="{% url 'cartView' %}" class="btn btn-success">Ver pedido</a>
            </ul>
 			</div>
 		</article>
