cambio enlace a boton el confirmar pedido

--- a/portal/templates/portal/carrito.html
+++ b/portal/templates/portal/carrito.html
@@ -23,7 +23,7 @@
 		<article class="row mt-5">
 			<div class="col-12">
             <ul>
-				<li></li><a href="{% url 'cartConfirm' %}">confirmar pedido</a></li>
+				<a href="{% url 'cartConfirm' %}" class="btn btn-success">Confirmar pedido</a>
            </ul>
 			</div>
 		</article>
