muestra el precio total

--- a/portal/templates/portal/carrito.html
+++ b/portal/templates/portal/carrito.html
@@ -23,6 +23,7 @@
 		<article class="row mt-5">
 			<div class="col-12">
             <ul>
+				<p class="text-primary">Total: $ {{total}}</p>  
 				<a href="{% url 'cartConfirm' %}" class="btn btn-success">Confirmar pedido</a>
            </ul>
 			</div>
