--- a/portal/templates/portal/carrito.html
+++ b/portal/templates/portal/carrito.html
@@ -7,23 +7,23 @@
 		</div>
 	</div>
 
-    {% if items|length == 0 %}
-    <h2 class="text-center">No hay ítems cargados.</h2>
-    {% endif %}
-	{% for item, cantidad  in items %}
+
+{% for item, cantidad  in items %}
 		<article class="row mt-3">
 			<div class="col-12">
-				<p class="text-primary">({{cantidad}}) {{item}} $ {{item.price}}</p>  
+				<p class="text-primary">({{cantidad}}) {{item}} $ {{item.price}}</p>
 			</div>
 		</article>
+	{% empty %}
+		<p class="text-center">No hay productos agregados en tu pedido.</p>
 	{% endfor %}
-    
+
 
     {% if pedidos %}
 		<article class="row mt-5">
 			<div class="col-12">
             <ul>
-				<p class="text-primary">Total: $ {{total}}</p>  
+				<p class="text-primary">Total: $ {{total}}</p>
 				<a href="{% url 'cartConfirm' %}" class="btn btn-success">Confirmar pedido</a>
            </ul>
 			</div>
