se permite limpiar el carrito

--- a/portal/templates/portal/carrito.html
+++ b/portal/templates/portal/carrito.html
@@ -25,6 +25,7 @@
             <ul>
 				<p class="text-primary">Total: $ {{total}}</p>
 				<a href="{% url 'cartConfirm' %}" class="btn btn-success">Confirmar pedido</a>
+				<a href="{% url 'cartClear' %}" class="btn btn">Borrar carrito</a>
            </ul>
 			</div>
 		</article>
