Reemplazo Pedido x Solicitud

--- a/portal/templates/portal/carrito.html
+++ b/portal/templates/portal/carrito.html
@@ -2,7 +2,7 @@
 {% block content %}
 	<div class="row mt-5">
 		<div class="col-12">
-			<h1 class="text-center">Solicitud</h1>
+			<h1 class="text-center">Pedido</h1>
 			<!-- <p>Platos solicitados</p> -->
 		</div>
 	</div>
