Agregue boton Seguir Comprando

--- a/portal/templates/portal/carrito.html
+++ b/portal/templates/portal/carrito.html
@@ -28,6 +28,7 @@
 				<p class="text-primary">Total: $ {{total}}</p>
 				<a href="{% url 'cartConfirm' %}" class="btn btn-success">Confirmar pedido</a>
 				<a href="{% url 'cartClear' %}" class="btn btn-danger">Borrar carrito</a>
+				<a href="{% url 'home' %}" class="btn btn-dark">Seguir comprando</a>
            </ul>
 			</div>
 		</article>
